add correct wrraper class to news posts

--- a/site/en/_data/news.yml
+++ b/site/en/_data/news.yml
@@ -1,7 +1,7 @@
 posts:
   title: Chrome OS news and stories
   modifiers:
-    shapeOn: 1
+    custom: item-grid--posts
 featured:
   modifiers:
     custom: landing--news-grey-overlay
