update to ix:// sources

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -104,8 +104,7 @@ subnav:
     variant: subnav
 m100:
   image:
-    #TODO src: ix://devices/HP_color_chromebook_stylus.png
-    src: https://drive.google.com/uc?id=1fVu1AaaEbJCEy-HWy4lEcjC7qPznavJC
+    src: ix://devices/HP_color_chromebook_stylus.png
     alt: A partially opened Samsung Chromebook next to a stylus.
   content:
     eyebrow: M100 Launch
