--- a/site/en/_data/stories.yml
+++ b/site/en/_data/stories.yml
@@ -2,8 +2,15 @@ featured:
   modifiers:
     custom: landing--stories-full-bleed
 sections:
+  headings:
+    - tag: pwa
+      title: Progressive web applications
+      subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id elit vestibulum, vehicula massa quis, molestie tellus.
+    - tag: games
+      title: Games
+    - tag: android
+      title: Android
   modifiers:
     custom: stories-section
     variant: stories
-    heading: h2
     subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id elit vestibulum, vehicula massa quis, molestie tellus.
