Apply suggestions from code review
Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -10,7 +10,7 @@
       url: web
     - title: Games
       url: games
-    - title: Building for Education
+    - title: Education
       url: education
 - title: Build
   desc: Use Chrome OS to develop apps in a fast, secure, and hassle-free environment.
