💎(content) Add education content to ChromeOS.dev. (#316)
* 💎(content) Add education content to ChromeOS.dev.

This adds the foundation for education content to be added to
ChromeOS.dev. Future PRs will have the index more filled out and
additional content that can be reviewed.

* Fixed some nav elements and linting

* Added some sample pages for education content

* 📝(content) Edits to IWD post for Julia's interview (#327)

* Add pull quotes from IWD Julia's interview

* Update site/en/posts/iwd-2022-julia-enthoven.md

Co-authored-by: Sam Richard <snugug@google.com>

* Remove name from pull quotes

Co-authored-by: Sam Richard <snugug@google.com>

* Add Julia's headshot image (#331)

Co-authored-by: Sam Richard <snugug@google.com>

* 📝(content) Shree Bose Interview for IWD (#343)

* First draft of Shree Bose Interview

* Added hadrosaur to contributers

* Added photo of Shree Bose

* Minor edit

* Photo url update, minor edits

* Renamed article filename

Co-authored-by: Emilie Roberts <hadrosaur@google.com>

* 📝(content) Revert Shree Bose Interview for IWD

This reverts commit a2564b11d29a118134512b7c85fec47688de7d95.

* 📝(content) Shree Bose Interview for IWD  (#350)

* First draft of Shree Bose Interview

* Added hadrosaur to contributers

* Added photo of Shree Bose

* Minor edit

* Photo url update, minor edits

* Renamed article filename

* Updated Minecraft product names

Co-authored-by: Emilie Roberts <hadrosaur@google.com>

* 📌(functions) Bump firebase-functions from 3.18.1 to 3.19.0 in /functions (#351)

Bumps [firebase-functions](https://github.com/firebase/firebase-functions) from 3.18.1 to 3.19.0.
- [Release notes](https://github.com/firebase/firebase-functions/releases)
- [Changelog](https://github.com/firebase/firebase-functions/blob/master/tsconfig.release.json)
- [Commits](https://github.com/firebase/firebase-functions/compare/v3.18.1...v3.19.0)

---
updated-dependencies:
- depe

--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -10,6 +10,8 @@
       url: web
     - title: Games
       url: games
+    - title: Education
+      url: education
 - title: Publish
   desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
   icon:
