Update Spanish news and stories
Removed circle modifier from news landing page, remvoed featured images from Asphalt so it falls back to just the hero

--- a/site/es/_data/news.yml
+++ b/site/es/_data/news.yml
@@ -1,7 +1,7 @@
 posts:
   title: Historias y noticias sobre Chrome OS
   modifiers:
-    shapeOn: 1
+    custom: item-grid--posts
 featured:
   modifiers:
     custom: landing--news-grey-overlay
