--- a/site/es/_data/news.yml
+++ b/site/es/_data/news.yml
@@ -1,11 +1,7 @@
 posts:
-  title: Historias y noticias sobre Chrome OS
+  title: Noticias sobre Chrome OS
   modifiers:
     custom: item-grid--posts
 featured:
   modifiers:
     custom: landing--news-grey-overlay
-stories:
-  title: Vea cómo distintas marcas están abriendo nuevas oportunidades con Chrome OS
-  modifiers:
-    variant: icon
