fix missing svg icon on subnav component

--- a/site/es/_data/nav.yml
+++ b/site/es/_data/nav.yml
@@ -1,6 +1,8 @@
 - title: Aprender
   desc: Descubra recursos para comenzar a crear sus aplicaciones de Android, aplicaciones web y juegos para Chrome OS.
-  icon: game-controller
+  icon:
+    name: multi-device
+    background: blue
   sections:
     - title: Android
       url: android
@@ -11,11 +13,14 @@
 - title: Publicar
   desc: Obtén información sobre cómo publicar tus aplicaciones en Google Play Store e involucra a millones de usuarios en Chromebooks.
   url: publish
-  icon: publish
-  alt: publish
+  icon:
+    name: upload
+    background: green
 - title: Desarrollo
   desc: Utilice Chrome OS para desarrollar aplicaciones en un entorno rápido, seguro y sin complicaciones.
-  icon: wrench
+  icon:
+    name: bracket-monitor
+    background: yellow
   sections:
     - title: Linux
       url: linux
