--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -134,7 +134,7 @@ developers:
         copy: “Cloud Stop Motion PWA reached more users in 12 months than our desktop app reached in 10 years!”
         author:
           name: David Henley
-          role: CEO, Cloud Stop motion
+          role: CEO, Cloud Stop Motion
       image:
         src: ix://home/quotes/david-henley-0.jpg
         alt: David Henley, looking to the side of the camera, in front of a full bookcase.
