Update interstitial text

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -99,12 +99,12 @@ m100:
     src: ix://devices/HP_color_chromebook_stylus.png
     alt: A partially opened Samsung Chromebook next to a stylus.
   content:
-    eyebrow: M100 Launch
-    title: New Features
-    copy: Coming in all shapes and sizes, Chromebooks are speedy, simple, secure, and run Chrome OS.
+    eyebrow: Featured story
+    title: Celebrating Chrome OS 100
+    copy: Recapping how we've grown with developers over the years
   cta:
-    url: news
-    text: Learn more
+    url: posts/chromeos-100
+    text: Read more
 posts:
   title: The latest on Chrome OS.
   modifiers:
