📝(content) Add remaining content (#386)
* Add metadesc and update publish date

* WIP Codecademy post

* WIP Stats update for decimals in stats

* Allow decimals in stats

* Update app name, hero, tags

* Update featuring logic

Current logic left us featuring older case studies. We may revisit after we get a more regular case study cadence

* Fix media pulling the right images for stories landing page

* Have featured story use media instead of images array

* Add tag normalization

This ensures that similiar tags, and tags across languages, can be normalized into the english words used asset lookup

* Give all blog posts a blog tag

This also aligns how case studies are tagged, reducing the differences, allowing some template cleanup

* Update Spanish news and stories

Removed circle modifier from news landing page, remvoed featured images from Asphalt so it falls back to just the hero

* Separate changing theme from updating display

Allows for better control and more _magic_

* Add optional theme properties for post

* Pull theme and hero into post hero

Theme will also override eyebrow and icon in cards

Hero gets overlaid on top of background for hero and featured items

* Remove heros from existing posts

None of the existing posts' heros align with current designs, so removing them

* Add hero and theme for Crostini post

* Update article layout

* Remove block margin for inline date-time

* Update article footer styling

* Clean up attributed quote

* Add ix transforms for srcset

* Allow post background images to change

* Update post with top and bottom backgrounds

* Add image swapping to hero

* Add definitions for theme to posts

* Small tweaks to Phosphor

Adding missing components, making sure text is readable, filling inline SVGs

* Make sure a stringified undefined isn't returned

* Remove poster addition for GIFs as it forces a full download of the GIF, defeating the purpose o

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -41,7 +41,7 @@ routing:
         title: Invite more gamers to play along.
         copy: Engage millions of players looking for their next favorite challenge—it's a win win.
       image:
-        src: ix://home/2022/more_gamers.png
+        src: ix://home/2022/gamers.png
         alt: An assortment of characters created by Riot games.
       cta:
         url: games
@@ -76,15 +76,18 @@ stats:
       modifiers:
         shape: semicircle
         scale: full
+      footnote: 1
     - stat: +50%
       desc: Chromebook users engaging with Android apps, YoY
       modifiers:
         shape: circle
+      footnote: 2
     - stat: 50M
       desc: Students and educators using Chromebooks worldwide
       modifiers:
         shape: triangle
         scale: half
+      footnote: 3
 caseStudies:
   title: Get inspired.
   subtitle: Explore how brands are unlocking more possibilities with Chrome OS.
@@ -96,12 +99,12 @@ m100:
     src: ix://devices/HP_color_chromebook_stylus.png
     alt: A partially opened Samsung Chromebook next to a stylus.
   content:
-    eyebrow: M100 Launch
-    title: New Features
-    copy: Coming in all shapes and sizes, Chromebooks are speedy, simple, secure, and run Chrome OS.
+    eyebrow: Featured story
+    title: Celebrating Chrome OS 100
+    copy: Recapping how we've grown with developers over the years
   cta:
-    url: news
-    text: Learn more
+    url: posts/chromeos-100
+    text: Read more
 posts:
   title: The latest on Chrome OS.
   modifiers:
@@ -128,32 +131,32 @@ developers:
     subtitle: Here's what our community has to say.
   quotes:
     - content:
-        copy: “Lorem ipsum dolor sit amet adipiscing elit ipsum dolor sit amet adipiscing elit.”
+        copy: “Cloud Stop Motion PWA reached more users in 12 months than our desktop app reached in 10 years!”
         author:
-          name: Mike C.
-          role: Head Engineer
+          name: David Henley
+          role: CEO, Cloud Stop Motion
       image:
-        src: ix://lifestyle/developer_1.png
-        alt: Mike C. leaning against a desk.
+        src: ix://home/quotes/david-henley-0.jpg
+        alt: David Henley, looking to the side of the camera, in front of a full bookcase.
     - content:
-        copy: “Lorem ipsum dolor sit amet adipiscing elit ipsum dolor sit amet adipiscing elit.”
+        copy: “Piper Make saw a 38% increase in its user base after introducing an offline-enabled, streamlined PWA.”
         author:
-          name: Mike C.
-          role: Head Engineer
+          name: Shree Bose
+          role: Co-Founder, Piper
       image:
-        src: ix://lifestyle/developer_2.png
-        alt: Mike C. smiling at the camera.
+        src: ix://home/quotes/shree-0.jpeg
+        alt: Shree Bose wearing scrubs and a stethoscope, setting an infant into a crib in a hospital setting.
       decorators:
         - ix://lifestyle/code_sample_sudo.png
         - ix://lifestyle/command_key.png
     - content:
-        copy: “Lorem ipsum dolor sit amet adipiscing elit ipsum dolor sit amet adipiscing elit.”
+        copy: “Our ability to closely collaborate with the Chrome OS team has enabled Dropbox to expand our offerings to Chromebooks and provide a seamless user experience.”
         author:
-          name: Mike C.
-          role: Head Engineer
+          name: Sam Edwards
+          role: Staff Mobile Engineer, Dropbox
       image:
-        src: ix://lifestyle/developer_3.png
-        alt: Mike C. leaning against a desk.
+        src: ix://home/quotes/sam-edwards-1.jpg
+        alt: Sam Edwards, looking straight ahead but not at the camera, working on a Chromebook.
 community:
   title: Developer channels to get you started.
   modifiers:
@@ -190,3 +193,9 @@ videos:
   modifiers:
     variant: video
     heading: h2
+footnotes:
+  notes:
+    - Google Internal Data, Feb 1 2021 to Feb 1 2022.
+    - Google Internal Data, 2020-2021.
+    - Google Internal Data, January 2022.
+  variant: landing
