--- a/site/es/_data/home.yml
+++ b/site/es/_data/home.yml
@@ -1,51 +1,51 @@
 hero:
   heading:
-    default: Expand how the world
-    accent: engages with your app.
-  copy: Tap into millions of users when you bring your apps and games to Chrome OS.
+    default: Aumenta la manera en que el mundo
+    accent: interactúa con tu app.
+  copy: Accede a millones de usuarios  trayendo tu aplicación a Chrome OS.
   media:
     placeholder:
       src: ix://home/2022/static-hero.svg
-      alt: A single screen morphing between mobile, tablet, and laptop devices.
+      alt: Una única pantalla cambiando de tamaño entre dispositivos móviles, tablets, y laptops.
     phosphor:
       src: ix://home/2022/phosphor-hero.svg
-      alt: A single screen morphing between mobile, tablet, and laptop devices.
+      alt: Una única pantalla cambiando de tamaño entre dispositivos móviles, tablets, y laptops..
     static:
       src: ix://home/2022/storyboard-hero.png
-      alt: A series of mobile, tablet, and laptop devices filled  with shapes.
+      alt: Una serie de dispositivos móviles, tables y laptops con contenido de diferentes figuras.
 routing:
   items:
     - content:
-        title: Unlock the next level of web apps.
-        copy: Build more powerful experiences with the latest tools and APIs for web built right in.
+        title: Alcanza el siguiente nivel en aplicaciones web.
+        copy: Crea experiencias más poderosas con las últimas herramientas y APIs para la web completamente integradas.
       image:
         src: ix://home/2022/better_experience.png
-        alt: A person using a chromebook with a stylus at their desk.
+        alt: Una persona usando una chromebooks con un stylus en su escritorio.
       cta:
         url: web
-        text: Learn more
+        text: Más información
       modifiers:
         shapes: primary
     - content:
-        title: Take it to the big screen.
-        copy: Easily adapt your existing mobile app for large-screen devices to reach more Android users.
+        title: Alcanza la gran pantalla.
+        copy: Adapta fácilmente tu aplicación móvil actual para dipositivos con pantallas grandes para atraer más usuarios de Android.
       image:
         src: ix://home/2022/hello_android.png
-        alt: An android device using the Evernote app.
+        alt: Un dispositivo Android usando Evernote.
       cta:
         url: android
-        text: Learn more
+        text: Más información
       modifiers:
         shapes: secondary
     - content:
-        title: Invite more gamers to play along.
-        copy: Engage millions of players looking for their next favorite challenge—it's a win win.
+        title: Una invitación a más juegos, más diversión.
+        copy: Invita a millones de jugadores en búsqueda de su próximo desafío favorito— ganancia para todos.
       image:
         src: ix://home/2022/more_gamers.png
-        alt: An assortment of characters created by Riot games.
+        alt: Un grupo de personajes creados por juegos Riot.
       cta:
         url: games
-        text: Learn more
+        text: Más información
       modifiers:
         shapes: tertiary
   modifiers:
@@ -53,26 +53,26 @@ routing:
 linux:
   content:
     title: |
-      Impressively versatile.
-      Exceptionally easy.
+      Impresionantemente versátil.
+      Excepcionalmente fácil.
     copy: Linux is seamlessly built into Chrome OS so you’ll always be ready whenever inspiration hits.
   cta:
-    text: Learn more
+    text: Más información
     url: linux
   images:
     - src: ix://devices/Chromebook_numpad.png
-      alt: Opened Chromebook with a birds eye view of a beach set as its background.
+      alt: Chromebook abierta con una vista panóramica de una playa configurada como fonde de pantalla.
     - src: ix://lifestyle/vim_window.jpg
-      alt: A Vim text editor with code.
+      alt: Un editor de texto Vim con código.
     - src: ix://home/2022/m100start.svg
-      alt: '"m100.start()" appears inside a repeating pattern of curly braces.'
+      alt: '"m100.start()" se muestra dentro de un patrón de paréntesis que se repiten'
 stats:
   modifiers:
     heading: Grow in good company.
     subtitle: Keep your app—and your audience—growing, across the Chrome OS community.
   items:
     - stat: +270%
-      desc: Desktop PWA installs, YoY
+      desc: Desktop PWA installs , YoY
       modifiers:
         shape: semicircle
         scale: full
@@ -81,15 +81,15 @@ stats:
       modifiers:
         shape: circle
     - stat: 50M
-      desc: Students and educators using Chromebooks worldwide
+      desc: Estudiantes y educadores usando Chromebooks alrededor del mundo
       modifiers:
         shape: triangle
         scale: half
 caseStudies:
-  title: Get inspired.
+  title: Encuentra inspiración.
   subtitle: Explore how brands are unlocking more possibilities with Chrome OS.
   cta:
-    text: All Case Studies
+    text: Casos de estudio
     url: stories
 m100:
   image:
@@ -106,26 +106,26 @@ posts:
   title: Lo último sobre Chrome OS
   modifiers:
     custom: item-grid--posts
-    subtitle: Explore trends, events, and updates on our community.
+    subtitle: Descubre tendencias, eventos, y actualizaciones en nuestra comunidad.
     cta:
-      text: All Articles
+      text: Todos los artículos
       url: news
 educators:
   content:
-    title: Empower millions of students and educators.
+    title: Empodera a millones de estudiantes y educadores.
     copy: Learn how your app can power learning experiences for 50 million Chromebooks in the classrooms.
   cta:
     text: Learn more
     url: education
   images:
     - src: ix://lifestyle/education.png
-      alt: Two children using a chromebook.
+      alt: Dos niños usando una chromebook.
   modifiers:
     class: fifty-fifty--educators
 developers:
   content:
-    title: Why they build with Chrome OS.
-    subtitle: Here's what our community has to say.
+    title: Porque están creando para Chrome OS.
+    subtitle: Mira lo que la comunidad comenta.
   quotes:
     - content:
         copy: “Lorem ipsum dolor sit amet adipiscing elit ipsum dolor sit amet adipiscing elit.”
@@ -134,7 +134,7 @@ developers:
           role: Head Engineer
       image:
         src: ix://lifestyle/developer_1.png
-        alt: Mike C. leaning against a desk.
+        alt: Mike C. recostado en un escritorio.
     - content:
         copy: “Lorem ipsum dolor sit amet adipiscing elit ipsum dolor sit amet adipiscing elit.”
         author:
@@ -142,7 +142,7 @@ developers:
           role: Head Engineer
       image:
         src: ix://lifestyle/developer_2.png
-        alt: Mike C. smiling at the camera.
+        alt: Mike C. sonriendo a la cámara.
       decorators:
         - ix://lifestyle/code_sample_sudo.png
         - ix://lifestyle/command_key.png
@@ -153,7 +153,7 @@ developers:
           role: Head Engineer
       image:
         src: ix://lifestyle/developer_3.png
-        alt: Mike C. leaning against a desk.
+        alt: Mike C. recostado en un escritorio.
 community:
   title: Noticias y recursos para desarrolladores para que pueda empezar a trabajar
   modifiers:
@@ -178,16 +178,16 @@ subnav:
   modifiers:
     variant: subnav
 videos:
-  title: Watch the latest videos.
+  title: Mira los vídeos más recientes.
   items:
     - video:
-        title: Developer Keynote at Google I/O '21
+        title: Keynote para developers en Google I/O '21
         id: FPuaaYpUd5s
     - video:
         title: Chrome OS Demo Day
         id: 7JvD7Zamv9A
     - video:
-        title: Creating a more private internet
+        title: Creando un internet más privado
         id: _u9_3umb5LY
   modifiers:
     variant: video
