--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -12,6 +12,8 @@
       url: games
     - title: Education
       url: education
+    - title: Enterprise
+      url: enterprise
 - title: Publish
   desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
   icon:
