Fix video title on home page

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -182,7 +182,7 @@ videos:
   title: Watch the latest videos.
   items:
     - video:
-        title: Developer Keynote at Google I/O '21
+        title: Input matters for Chrome OS
         id: FPuaaYpUd5s
     - video:
         title: Chrome OS Demo Day
