--- a/site/es/_data/home.yml
+++ b/site/es/_data/home.yml
@@ -77,15 +77,18 @@ stats:
       modifiers:
         shape: semicircle
         scale: full
+      footnote: 1
     - stat: +50%
       desc: Usarios de Chromebook users interactúando con Android apps, YoY
       modifiers:
         shape: circle
+      footnote: 2
     - stat: 50M
       desc: Estudiantes y educadores usando Chromebooks alrededor del mundo
       modifiers:
         shape: triangle
         scale: half
+      footnote: 3
 caseStudies:
   title: Encuentra inspiración.
   subtitle: Descubre como algunas marcas están desbloqueando nuevas posibilidades con Chrome OS.
@@ -193,3 +196,9 @@ videos:
   modifiers:
     variant: video
     heading: h2
+  footnotes:
+    notes:
+      - Datos Internos de Google, 1 Feb 2021 a 1 Feb 2022.
+      - Datos Internos de Google, 2020-2021.
+      - Datos Internos de Google, Enero 2022.
+    variant: landing
